Fix the items in each file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-library-template",
+  "name": "valivali-project",
   "description": "",
   "private": true,
   "scripts": {
