--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,7 +2,7 @@
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
   "changelog": [
     "@changesets/changelog-github",
-    { "repo": "your_name/repository_name" }
+    { "repo": "Karibash/valivali" }
   ],
   "commit": false,
   "fixed": [],
