Add a core package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valivali-project",
-  "description": "",
+  "description": "Provide a common interface for schema validation.",
   "private": true,
   "scripts": {
     "postinstall": "preconstruct dev",
