--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "lint:check": "eslint .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:dist": "yarn build && jest -c jest.dist.js --no-cache --ci --runInBand",
+    "test:dist": "jest -c jest.dist.js --no-cache --ci --runInBand",
     "test:coverage": "jest --coverage --no-cache --ci --runInBand",
     "changeset": "changeset",
     "version-apply": "changeset version",
-    "release": "yarn build && changeset publish"
+    "release": "changeset publish"
   },
   "simple-git-hooks": {
     "pre-commit": "yarn lint-staged",
