--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,13 +15,8 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
+      - name: Setup
+        uses: ./.github/actions/setup
 
       - name: Create release pull request or publish to npm
         uses: changesets/action@v1
