--- a/packages/runtypes/package.json
+++ b/packages/runtypes/package.json
@@ -35,8 +35,8 @@
     "runtypes": "^6.0.0"
   },
   "devDependencies": {
-    "typescript": "4.9.4",
-    "runtypes": "6.6.0"
+    "runtypes": "6.6.0",
+    "typescript": "4.9.4"
   },
   "publishConfig": {
     "access": "public"
