--- a/packages/superstruct/package.json
+++ b/packages/superstruct/package.json
@@ -35,8 +35,8 @@
     "superstruct": "^1.0.0"
   },
   "devDependencies": {
-    "typescript": "4.9.4",
-    "superstruct": "1.0.3"
+    "superstruct": "1.0.3",
+    "typescript": "4.9.4"
   },
   "publishConfig": {
     "access": "public"
